@@ -1937,14 +1937,14 @@ NS_EXTERN size_t
 Ns_SetVec(struct iovec *iov, int i, void *data, size_t len)
     NS_GNUC_NONNULL(1);
 
+NS_EXTERN int
+Ns_ResetVec(struct iovec *iov, int nbufs, size_t sent)
+    NS_GNUC_NONNULL(1);
+
 NS_EXTERN int Ns_SockWait(SOCKET sock, int what, int timeout);
 NS_EXTERN int Ns_SockTimedWait(SOCKET sock, int what, Ns_Time *timeoutPtr);
 NS_EXTERN int Ns_SockRecv(SOCKET sock, void *vbuf, size_t nrecv,
                           Ns_Time *timeoutPtr);
-NS_EXTERN int Ns_SockWrite(SOCKET sock, void *vbuf, size_t towrite,
-                           Ns_Time *timePtr);
-NS_EXTERN int Ns_SockWriteV(SOCKET sock, struct iovec *bufs, int nbufs,
-                            Ns_Time *timePtr);
 NS_EXTERN int Ns_SockSend(SOCKET sock, void *vbuf, size_t nsend,
                           Ns_Time *timeoutPtr);
 NS_EXTERN int Ns_SockRecvBufs(SOCKET sock, struct iovec *bufs, int nbufs,
